Added toggle tabs layout.

--- a/registar-profil-firme.html
+++ b/registar-profil-firme.html
@@ -330,26 +330,26 @@
                     </div>
                     <div class="col-sm-12 col-md-12 card card-vijest ">
                         <div class="profil-card opcije">
-                            <li><a href="#" class="active">Osnovni Profil firme</a></li>
+                            <li><a href="#" data-target="tab-osnovno" class="active">Osnovni Profil firme</a></li>
                             <li><a href="#">Opis djelatnosti</a></li>
                             <li><a href="#">OSNOVNI PODACI</a></li>
                             <li><a href="#">Stanje računa</a></li>
                             <li><a href="#">Drugi kontakti</a></li>
                             <li><a href="#">KATALOG ROBA I USLUGA</a></li>
-                            <li><a href="#">TENDERI</a></li>
+                            <li><a href="#" data-target="tab-tendera">TENDERI</a></li>
                             <li><a href="#">POBJEDE NA TEDERIMA</a></li>
                             <li><a href="#">UČEŠCE NA TENDERIMA</a></li>
                             <li><a href="#">ISPORUČIOCI</a></li>
                             <li><a href="#">POVEZANE LIČNOSTI</a></li>
                             <li><a href="#">POVEZANE FIRME</a></li>
                             <li><a href="#">menadžerske pozicije </a></li>
-                            <button type="submit" class="btn btn-filter-refresh" style="    padding: 4px;">Prijavi grešku</button>
+                            <button type="submit" class="btn btn-filter-refresh">Prijavi grešku</button>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-6 col-lg-6 profil-centar nopadding">
-                    <div class="col-xs-12 card card-vijest ">
+                    <div class="col-xs-12 card card-vijest tab-podaci">
                         <div class="profil-card">
                             <h1 class="card-naslov-vijesti">KONZUM d.o.o. Sarajevo </h1>
                             <a href="# " class="star "><i class="fa fa-star "></i></a>
@@ -377,26 +377,26 @@
                             </table>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 card podaci-o-firmi broj-zaposlenih ">
+                    <div class="col-sm-12 col-md-4 card podaci-o-firmi broj-zaposlenih tab-osnovno">
                         <div class="profil-card ">
                             <p class="broj-radnika plavi ">4380</p>
                             <p class="broj-radnika label-zaposlenih ">zaposlenih<br>radnika</p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-8 card podaci-o-firmi neto-promet ">
+                    <div class="col-sm-12 col-md-8 card podaci-o-firmi neto-promet tab-osnovno">
                         <div class="profil-card ">
                             <p class="odgovorno-label ">Neto promet u 2016.</p>
                             <h1 class="odgovorno-lice plavi ">852.526.306,00 KM</h1>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-8 card podaci-o-firmi odgovorni ">
+                    <div class="col-sm-12 col-md-8 card podaci-o-firmi odgovorni tab-osnovno">
                         <div class="profil-card ">
                             <p class="odgovorno-label ">Odgovorno lice</p>
                             <h1 class="odgovorno-lice plavi ">David Dolinar</h1>
                             <p class="pozicija-odgovornog-lica ">direktor</p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 card podaci-o-firmi bank-racuni ">
+                    <div class="col-sm-12 col-md-4 card podaci-o-firmi bank-racuni tab-osnovno">
                         <div class="profil-card ">
                             <p class="label-racuni ">bankovni računi</p>
                             <hr>
@@ -405,9 +405,32 @@
                             <p class="label-racuni opisi "><span class="plavi ">aktivni</span> / <span class="crveni ">blokirani</span></p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-12 card podaci-o-firmi pravne-info djelatnost ">
+                    <div class="col-sm-12 col-md-12 card podaci-o-firmi pravne-info djelatnost tab-osnovno">
                         <div class="profil-card ">
                             <h1 class="card-naslov-vijesti" style="color: #999;">Djelatnost</h1>
+                            <table class="tabela-ofirmi ">
+                                <tr>
+                                    <td>46.39</td>
+                                    <td>Nespecijalizirana trgovina na veliko hranom, pićima i duhanskim proizvodima</td>
+                                </tr>
+                                <tr>
+                                    <td>51.170</td>
+                                    <td>Posredovanje u trgovini hranom, pićem i duhanom</td>
+                                </tr>
+                                <tr>
+                                    <td>51.390</td>
+                                    <td>Nespecijalizirana trgovina na veliko hranom, pićima i duhanom</td>
+                                </tr>
+                                <tr>
+                                    <td>52.110</td>
+                                    <td>Trgovina na malo u nespecijaliziranim </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-12 card podaci-o-firmi pravne-info djelatnost tab-tendera">
+                        <div class="profil-card ">
+                            <h1 class="card-naslov-vijesti" style="color: #999;">Tab tendera</h1>
                             <table class="tabela-ofirmi ">
                                 <tr>
                                     <td>46.39</td>
