Added datatables js to all footers

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 card ">
-                            <h2 class="module-label top5"><span>TOP 5 VIJESTI</span></h2>                          
+                            <h2 class="module-label top5"><span>TOP 5 VIJESTI</span></h2>
                             <div id="exTab3" class="tabs_module">
                                 <ul class="nav nav-justified nav-pills tabs">
                                     <li class="active">
@@ -504,7 +504,7 @@
                                     <li>
                                         <a href="#3b" data-toggle="tab">Ne propustite</a>
                                     </li>
-                                    </ul>
+                                </ul>
                                 <div class="tab-content clearfix">
                                     <div class="tab-pane active" id="1b">
                                         <div class="card-opis-vijesti">
@@ -747,7 +747,7 @@
                                     <h1 class="card-naslov-vijesti"><a href="#">Prodaja potraživanja</a></h1>
                                 </li>
 
-                               <!-- <div class="card-count-label">
+                                <!-- <div class="card-count-label">
                                     <p>Više tekstova TENDERI</p>
                                 </div>-->
                             </div>
@@ -870,7 +870,7 @@
                                 </ul>
                                 <div class="tab-content clearfix lista-berze">
                                     <div class="tab-pane active" id="berzesase">
-                                        <span class="label-kursnetabele" >Najveći rast</span>
+                                        <span class="label-kursnetabele">Najveći rast</span>
                                         <table class="table table-hover kursna-lista-tabela">
                                             <thead>
                                                 <tr>
@@ -886,10 +886,10 @@
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
-                                                </tr>                                               
+                                                </tr>
                                             </tbody>
                                         </table>
-                                         <span class="label-kursnetabele">Najveći pad</span>
+                                        <span class="label-kursnetabele">Najveći pad</span>
                                         <table class="table table-hover kursna-lista-tabela">
                                             <thead>
                                                 <tr>
@@ -905,7 +905,7 @@
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
-                                                </tr>                                               
+                                                </tr>
                                             </tbody>
                                         </table>
                                         <span class="label-kursnetabele">Najveći promet</span>
@@ -924,12 +924,12 @@
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
-                                                </tr>                                               
+                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
                                     <div class="tab-pane" id="berzeblse">
-                                        <span class="label-kursnetabele" >Najveći rast</span>
+                                        <span class="label-kursnetabele">Najveći rast</span>
                                         <table class="table table-hover kursna-lista-tabela">
                                             <thead>
                                                 <tr>
@@ -945,10 +945,10 @@
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
-                                                </tr>                                               
+                                                </tr>
                                             </tbody>
                                         </table>
-                                         <span class="label-kursnetabele">Najveći pad</span>
+                                        <span class="label-kursnetabele">Najveći pad</span>
                                         <table class="table table-hover kursna-lista-tabela">
                                             <thead>
                                                 <tr>
@@ -964,7 +964,7 @@
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
-                                                </tr>                                               
+                                                </tr>
                                             </tbody>
                                         </table>
                                         <span class="label-kursnetabele">Najveći promet</span>
@@ -983,7 +983,7 @@
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
-                                                </tr>                                               
+                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
@@ -1020,7 +1020,7 @@
                                 <li>
                                     <h1 class="card-naslov-vijesti"><a href="#">Kolumne</a></h1>
                                 </li>
-                                
+
                             </div>
                         </div>
                         <div class="col-xs-12 card card-newsletter card-vijest konvertor-valuta kreditni-kalk">
@@ -1489,7 +1489,7 @@
                         <p>
                             Copyright © 2016 akta.ba Sva prava zadržana.
                         </p>
-                        <p>Zabranjeno preuzimanje sadržaja bez dozvole izdavača. Ova elektronska serijska publikacija registrovana je pod ISSN brojem:  ISSN 1986-6968 (Online)</p>
+                        <p>Zabranjeno preuzimanje sadržaja bez dozvole izdavača. Ova elektronska serijska publikacija registrovana je pod ISSN brojem: ISSN 1986-6968 (Online)</p>
                     </div>
                 </div>
             </div>
@@ -1502,6 +1502,9 @@
 
     <script src="./js/jquery-ui.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.dataTables.min.js"></script>
+    <script src="./js/moment.js"></script>
+    <script src="./js/datetime-moment.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
     <script src="./js/imagesLoaded.js"></script>
