--- a/article.html
+++ b/article.html
@@ -925,6 +925,9 @@
 
     <script src="./js/jquery-ui.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.dataTables.min.js"></script>
+    <script src="./js/moment.js"></script>
+    <script src="./js/datetime-moment.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
     <script src="./js/imagesLoaded.js"></script>
