--- a/tenderi.html
+++ b/tenderi.html
@@ -654,7 +654,7 @@
                         <p>
                             Copyright © 2016 akta.ba Sva prava zadržana.
                         </p>
-                        <p>Zabranjeno preuzimanje sadržaja bez dozvole izdavača. Ova elektronska serijska publikacija registrovana je pod ISSN brojem:  ISSN 1986-6968 (Online)</p>
+                        <p>Zabranjeno preuzimanje sadržaja bez dozvole izdavača. Ova elektronska serijska publikacija registrovana je pod ISSN brojem: ISSN 1986-6968 (Online)</p>
                     </div>
                 </div>
             </div>
@@ -666,6 +666,9 @@
     <script src="./js/jquery.min.js"></script>
 
     <script src="./js/jquery-ui.min.js"></script>
+    <script src="./js/jquery.dataTables.min.js"></script>
+    <script src="./js/moment.js"></script>
+    <script src="./js/datetime-moment.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
