Registar pretraga responsive fixes

--- a/registar-pretraga.html
+++ b/registar-pretraga.html
@@ -65,7 +65,7 @@
                 <div class="navbar-header">
                     <a class="logo-link" href="#"><img class="logo" src="./images/logo.png" alt="logo"></a>
                 </div>
-                <h1 id="current_category" class="visible-xs-inline-block visible-sm-inline-block hidden-md hidden-lg tenderi">TENDERI</h1>
+                <h1 id="current_category" class="visible-xs-inline-block visible-sm-inline-block hidden-md hidden-lg registar">REGISTAR</h1>
                 <div id="header_navigation" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav hidden-xs visible-md visible-lg">
                         <li><a href="#">O nama</a></li>
@@ -330,7 +330,7 @@
                     </div>
 
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 card ">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 card ">
                     <div class="card-opis-vijesti">
                         <h1 class="card-naslov-vijesti">Kategorije za pretragu firmi</h1>
                         <div class="nav-side-menu ">
@@ -549,7 +549,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-9 card ">
+                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-9 card ">
                     <div class="card-opis-vijesti">
                         <h1 class="card-naslov-vijesti">Rezultati pretrage firmi</h1>
                         <div class="form-group nopadding">
@@ -561,7 +561,7 @@
                                             <option value="poredaj">Poredaj po</option>
                                     </select>
                             </div>
-                            <div class="col-md-4 pull-right nopadding sacuvane-firme-btn">
+                            <div class="col-md-6 pull-right nopadding sacuvane-firme-btn">
                                 <button type="submit" class="btn btn-filter-refresh">
                                                 PREGLED SAČUVANIH FIRMI <i class="fa fa-star"></i> 
                                             </button>
@@ -676,13 +676,13 @@
                                             <div class="modal-body">
                                                 <div class="row">
                                                     <div class="container-fluid okvir-boksova">
-                                                        <div class="col-sm-4 col-md-3 logo-firme">
+                                                        <div class="col-xs-4 col-sm-4 col-md-3 logo-firme">
                                                             <!-- ./images/firma-logotip.png -->
                                                             <div class="grid-contents">
                                                                 <img class="img img-responsive" src="http://placehold.it/150x150">
                                                             </div>
                                                         </div>
-                                                        <div class="col-sm-8 col-md-9 podaci-o-firmi">
+                                                        <div class="col-xs-8 col-sm-8 col-md-9 podaci-o-firmi">
                                                             <div class="grid-contents">
                                                                 <h1 class="registar-rezultati-imeFirme">KONZUM d.o.o. Sarajevo </h1>
                                                                 <a href="#" class="star"><i class="fa fa-star"></i></a>
@@ -711,6 +711,8 @@
                                                             </div>
                                                         </div>
                                                     </div>
+                                                </div>
+                                                <div class="row">
                                                     <div class="container-fluid okvir-boksova">
                                                         <div class="col-sm-12 col-md-6 podaci-o-firmi pravne-info">
                                                             <div class="grid-contents">
@@ -764,6 +766,8 @@
                                                             </div>
                                                         </div>
                                                     </div>
+                                                </div>
+                                                <div class="row">
                                                     <div class="container-fluid okvir-boksova">
                                                         <div class="col-sm-12 col-md-3 podaci-o-firmi broj-zaposlenih">
                                                             <div class="grid-contents">
@@ -788,6 +792,8 @@
                                                             </div>
                                                         </div>
                                                     </div>
+                                                </div>
+                                                <div class="row">
                                                     <div class="container-fluid okvir-boksova">
                                                         <div class="col-sm-12 col-md-12 text-center text-uppercase">
                                                             <div class="grid-contents footer-modala">
@@ -796,25 +802,27 @@
                                                         </div>
                                                     </div>
                                                 </div>
-
-
                                             </div>
+
+
                                         </div>
                                     </div>
                                 </div>
-
-
-
                             </div>
+
+
+
                         </div>
-
                     </div>
-                </div>
 
+                </div>
             </div>
-            <div class="hidden-xs ads">
-                <img class="img-responsive" src="http://placehold.it/1250x130?text=Place for ads.">
-            </div>
+
+        </div>
+        <div class="hidden-xs ads">
+            <img class="img-responsive" src="http://placehold.it/1250x130?text=Place for ads.">
+        </div>
+        <div class="container">
             <div class="wrapper-vijesti remargin">
                 <div class="col-xs-12">
                     <h1 class="naslov-kolone ">Aktuelno</h1>
@@ -969,12 +977,13 @@
                 </div>
 
             </div>
+        </div>
 
 
 
-            <div class="hidden-xs ads">
-                <img class="img-responsive" src="http://placehold.it/1250x130?text=Place for ads.">
-            </div>
+        <div class="hidden-xs ads">
+            <img class="img-responsive" src="http://placehold.it/1250x130?text=Place for ads.">
+        </div>
         </div>
 
 
