Added consloe log outputs for debugging safari click glitches.

--- a/registar-profil-firme.html
+++ b/registar-profil-firme.html
@@ -55,7 +55,6 @@
                 <li><a href="#" class="um_tenderi ">TENDERI</a></li>
                 <li><a href="#" class="um_promo">PROMO</a></li>
                 <li><a href="#" class="um_forum">FORUM</a></li>
-
             </ul>
         </nav>
     </div>
@@ -430,25 +429,8 @@
                     </div>
                     <div class="col-sm-12 col-md-12 card podaci-o-firmi pravne-info djelatnost tab-tendera">
                         <div class="profil-card ">
-                            <h1 class="card-naslov-vijesti" style="color: #999;">Tab tendera</h1>
-                            <table class="tabela-ofirmi ">
-                                <tr>
-                                    <td>46.39</td>
-                                    <td>Nespecijalizirana trgovina na veliko hranom, pićima i duhanskim proizvodima</td>
-                                </tr>
-                                <tr>
-                                    <td>51.170</td>
-                                    <td>Posredovanje u trgovini hranom, pićem i duhanom</td>
-                                </tr>
-                                <tr>
-                                    <td>51.390</td>
-                                    <td>Nespecijalizirana trgovina na veliko hranom, pićima i duhanom</td>
-                                </tr>
-                                <tr>
-                                    <td>52.110</td>
-                                    <td>Trgovina na malo u nespecijaliziranim </td>
-                                </tr>
-                            </table>
+                            <h1 class="card-naslov-vijesti plavi">Objavljeni tenderi</h1>
+
                         </div>
                     </div>
                 </div>
