Added tender-tab to profil firme

--- a/registar-profil-firme.html
+++ b/registar-profil-firme.html
@@ -430,7 +430,53 @@
                     <div class="col-sm-12 col-md-12 card podaci-o-firmi pravne-info djelatnost tab-tendera">
                         <div class="profil-card ">
                             <h1 class="card-naslov-vijesti plavi">Objavljeni tenderi</h1>
-
+                            <div class="col-xs-12 nopadding">
+                                <li>
+                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
+                                    <p class="card-kategorija tender-lista sa-datumima">Izvođenje radova na rekonstrukciji ograde objekta ATC Rakovica </p>
+                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                </li>
+                                <li>
+                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
+                                    <p class="card-kategorija tender-lista sa-datumima">Izvođenje radova na adaptaciji prostora za smještaj TK opreme RSU 2 Koševsko Brdo u naselju Ciglane, Sarajevo</p>
+                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                </li>
+                                <li>
+                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
+                                    <p class="card-kategorija tender-lista sa-datumima">Nabavka kancelarijskog materijala, sitnog inventara i kancelarijskog papira</p>
+                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                </li>
+                                <li>
+                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
+                                    <p class="card-kategorija tender-lista sa-datumima">Javni poziv ovlaštenim distributerima mobilnih uređaja proizvođača CAT i SONY </p>
+                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                </li>
+                                <li>
+                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
+                                    <p class="card-kategorija tender-lista sa-datumima">Izvođenje radova na adaptaciji i opremanju prostora za Telecom Centar Travnik II u Travniku </p>
+                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                </li>
+                                <li>
+                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
+                                    <p class="card-kategorija tender-lista sa-datumima">Nabavka SAP test data migration servera </p>
+                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                </li>
+                                <li>
+                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
+                                    <p class="card-kategorija tender-lista sa-datumima">Nabavka usluga osiguranja motornih i priključnih vozila Dioničkog društva BH Telecom Sarajevo, za period 01.01.2017.-31.12.2017. godine </p>
+                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                </li>
+                                <li>
+                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
+                                    <p class="card-kategorija tender-lista sa-datumima">Nabavka rezervnih jedinica RR sistema proizvođača CERAGON </p>
+                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                </li>
+                                <li>
+                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
+                                    <p class="card-kategorija tender-lista sa-datumima">(produženje roka) Nabavka usluga osiguranja imovine društva </p>
+                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                </li>
+                            </div>
                         </div>
                     </div>
                 </div>
