Set visible default tabs in profil firme.

--- a/registar-profil-firme.html
+++ b/registar-profil-firme.html
@@ -316,7 +316,7 @@
     </div>
 
     <!-- MAIN BODY -->
-    <section class="main_body_contents single_article">
+    <section class="main_body_contents single_article profil_firme">
         <div class="container">
 
             <div class="wrapper-vijesti remargin">
